# itos_exp

./: .gitignore  32106300004-张景致-实验1-软件211.docx  32106300004-张景致-实验2-软件211.docx  32106300004-张景致-实验3-软件211.docx  32106300004-张景致-实验4-软件211.docx  32106300004-张景致-实验5-软件211.docx  fifo.drawio  itos2.drawio  lru.drawio  opt  opt.drawio  template1.docx  实验1.docx  实验一  进程管理与进程通信.ppt  实验一指南.doc  实验三 内存管理.pptx  实验二 银行家算法.pptx  实验五 磁盘管理.pptx  实验四 文件系统.pptx  操作系统实验指导书2018(1).doc  操作系统实验模板.docx
itos_exp1/: CMakeLists.txt  common.h  main.c  q1.c  q2.c  q3.c  q4.c  q5rx.c  q5tx.c  q6rx.c  q6tx.c
itos_exp2/: CMakeLists.txt  main.c
itos_exp3/: CMakeLists.txt  lcpr.h  main.c  result.txt
itos_exp4/: CMakeLists.txt  main.c  output.txt
itos_exp5/: CMakeLists.txt  main.c
